tests/baselines/reference/classAbstractMixedWithModifiers.errors.txt
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMixedWithModifiers.ts(6,13): error TS1243: 'private' modifier cannot be used with 'abstract' modifier.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMixedWithModifiers.ts(8,14): error TS1029: 'public' modifier must precede 'abstract' modifier.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMixedWithModifiers.ts(9,14): error TS1029: 'protected' modifier must precede 'abstract' modifier.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMixedWithModifiers.ts(10,14): error TS1243: 'private' modifier cannot be used with 'abstract' modifier.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMixedWithModifiers.ts(12,14): error TS1243: 'static' modifier cannot be used with 'abstract' modifier.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMixedWithModifiers.ts(14,12): error TS1243: 'static' modifier cannot be used with 'abstract' modifier.


==== tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMixedWithModifiers.ts (6 errors) ====
    abstract class A {
        abstract foo_a();
        
        public abstract foo_b();
        protected abstract foo_c();
        private abstract foo_d();
                ~~~~~~~~
!!! error TS1243: 'private' modifier cannot be used with 'abstract' modifier.
        
        abstract public foo_bb();
                 ~~~~~~
!!! error TS1029: 'public' modifier must precede 'abstract' modifier.
        abstract protected foo_cc();
                 ~~~~~~~~~
!!! error TS1029: 'protected' modifier must precede 'abstract' modifier.
        abstract private foo_dd();
                 ~~~~~~~
!!! error TS1243: 'private' modifier cannot be used with 'abstract' modifier.
        
        abstract static foo_d();
                 ~~~~~~
!!! error TS1243: 'static' modifier cannot be used with 'abstract' modifier.
        
        static abstract foo_e();
               ~~~~~~~~
!!! error TS1243: 'static' modifier cannot be used with 'abstract' modifier.
    }